tests/ui/parser/unicode-string-literal-syntax-error-64792.stderr
error[E0423]: cannot find function, tuple struct or tuple variant `X` in this scope
  --> $DIR/unicode-string-literal-syntax-error-64792.rs:4:14
   |
LL | struct X {}
   | ----------- `X` defined here
LL |
LL | const Y: X = X("ö");
   |              ^^^^^^ help: use struct literal syntax instead: `X {}`
   |
   = note: a struct named `X` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
